[FIX] .oe_website_spinner dynamic awesomeness (flexible qty snippet) [FIX] Better alignment for multiple spinners in a table (shopping cart) [IMP] Removing Javascript redundancies

--- a/addons/website/static/src/css/website.sass
+++ b/addons/website/static/src/css/website.sass
@@ -456,8 +456,13 @@ span[data-oe-type="monetary"]
     overflow:hidden
     text-overflow:ellipsis
 
+td .oe_website_spinner
+    margin: auto;
+
 .oe_website_spinner
-    width: 121px
+    width: 112px
+    span.input-group-addon
+        cursor: pointer
     input
         text-align: center
 
